fix weird bg bug on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -7,6 +7,11 @@
   font-family: Mukta, sans-serif;
 }
 
+body {
+  min-height: 100dvh;
+  background-color: #191919
+}
+
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
   padding: 0;
